# smartLock_v4.0

./: .gitignore  CARCASA.md  FIRMWARE.md  README.md  SMARTLOCK_4.0.md
docs/: qr-code-provisioning.md
firmware/smartlock_v4/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/smartlock_v4/components/app_insights/: CMakeLists.txt  app_insights.c  app_insights.h
firmware/smartlock_v4/components/app_network/: CMakeLists.txt  Kconfig.projbuild  app_network.c  app_network.h  app_wifi_internal.c  idf_component.yml  sdkconfig.rename
firmware/smartlock_v4/components/app_network/private_include/: app_wifi_internal.h
firmware/smartlock_v4/components/app_reset/: CMakeLists.txt  app_reset.c  app_reset.h  idf_component.yml
firmware/smartlock_v4/docs/: progress.md
firmware/smartlock_v4/main/: CMakeLists.txt  app_config.h  app_driver.c  app_priv.h  idf_component.yml  main.c
firmware/smartlock_v4/main/managers/: cloud_manager.c  cloud_manager.h
irmware/smartlock_v4/components/app_network/: app_wifi.h
